$Id$

NOTE: This is the 1.3.X development branch.  Put code changes right
below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - Applied PATCH [1826466 ] update to translations/Italian.txt
 - Fixed bug [ 1826464 ] wrong default browser language
 - Applied PATCH [ 1813253 ] patch for upgrade-postgres.sql
 - Fixed bug [ 1818796 ] DbCachedir readable by any WebCal installation
 - Fixed bug [ 1819188 ] v1.1.6 SelectWeek problem
 - Added <blink></blink> login back into translate.php to aid in development
 - Cleaned up new Participant Selection
 - Fix bug [ 1819327 ] 1.1.6 Wrong "goto my calender" link, with own views
 - Fix bug [ 1811925 ] Participant selection needs improvement
   with related Patch [ 1816757 ] v1.1.6 PATCH to improve Participant Selection
 - Fix bug [ 1814377 ] 1.1.6 Week.php and repeats
 - Fix bug [ 1792322 ] wrong filled variables at installation wizard step 3
   ( PHP str_replace doesn't work right. )
 - Patch 1798549: Updated French translation
 - Fix bug [ 1802380 ] Error in freebusy.php.
 - Patch 1791947: Handle the OPTIONS method in icalclient.php
   (Used by Evolution linux client.)
 - Patch 1792796: Debian fix for vulnerability CVE-2006-6669
   Fixes cross-site scripting (XSS) vulnerability in export_handler.php.
 - Security fix: vulnerability in $includeDir in functions.php
   Renamed getPredefinedVariables.php to formvars.php
 - Patch 1719114: Allow leading/trailing space in header/trailer file name
 - Added Indonesian translation
 - Bug fix: icalclient.php was not working with Thunderbird/Lightning
 - FIxed bug [ 1780025 ] moonphase: Notice: Undefined index: 20070731 in functions.php
 - MySqli can now create database during installation
 - Remove '+' icon from month.php, week.php, day.php.
   Users can now double-click on a date to add a new event.
 - Added CDATA block around JS in view_r.php
 - Applied PATCH [ 1203702 ] Sys-Admin Guide fails to mention LDAP support in PHP